app/projects/[projectSlug]/ProjectShowcase.module.css
.projectShowcase {
  text-align: center;
  margin-top: 3rem;
  position: relative;
  padding-bottom: 0;
}

@media screen and (min-width: 990px) {
  .projectShowcase {
    margin-top: 5rem;
  }
}

.projectShowcaseHome {
  display: none;
}

@media screen and (min-width: 990px) {
  .projectShowcaseHome {
    display: block;
    position: absolute;
    top: 3rem;
    left: 4rem;
    border: 1px solid var(--color-secondary-darker);
    border-radius: 50%;
    width: 7rem;
    height: 7rem;
    transition: border-color 0.3s ease;
  }
}

.projectShowcaseHome::before {
  pointer-events: none;
  content: 'Home';
  position: absolute;
  left: 50%;
  bottom: 0;
  transform: translateX(-50%);
  opacity: 0;
  color: var(--color-tertiary-darker);
  transition: all 0.3s ease;
}

.projectShowcaseHome:hover {
  border-color: var(--color-tertiary-darker);
}

.projectShowcaseHome:hover::before {
  transform: translateX(-50%) translateY(160%);
  opacity: 1;
}

.projectShowcaseHome :global(.logo) {
  height: 5rem;
  padding: 1rem;
  box-sizing: content-box;
  object-fit: contain;
}

.projectComingSoon {
  margin-top: 16rem;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  line-height: 180%;
}

.projectOverview {
  display: grid;
  grid-template-columns: 1fr;
  justify-items: center;
  align-items: center;
  margin-top: 4rem;
}

@media screen and (min-width: 990px) {
  .projectOverview {
    gap: 12rem;
    grid-template-columns: auto auto;
    margin-top: 8rem;
  }
}

@media screen and (min-width: 1500px) {
  .projectOverview {
    gap: 0;
  }
}

@media screen and (min-width: 2000px) {
  .projectOverviewImages {
    margin-top: 10rem;
  }
}

.projectOverviewImages {
  position: relative;
  margin-bottom: 8rem;
  margin: 0 4rem 8rem;
  width: 100%;
  max-width: 67.5rem;
}

@media screen and (min-width: 750px) {
  .projectOverviewImages {
    margin: 0 8rem 8rem 8rem;
  }
}

@media screen and (min-width: 990px) {
  .projectOverviewImages {
    margin: 0 3rem 8rem 14rem;
  }
}

@media screen and (min-width: 1200px) {
  .projectOverviewImages {
    margin: 0 3rem 8rem 16rem;
  }
}

@media screen and (min-width: 1500px) {
  .projectOverviewImages {
    margin: 0 4rem 8rem 8rem;
  }
}

@media screen and (min-width: 2000px) {
  .projectOverviewImages {
    max-width: 74rem;
  }
}

.projectOverviewIpad,
.projectOverviewIphone {
  position: absolute;
  bottom: 0;
  z-index: 2;
}

.projectOverviewImac {
  width: 100%;
  max-width: 67.5rem;
}

@media screen and (min-width: 2000px) {
  .projectOverviewImac {
    max-width: 74rem;
  }
}

.projectOverviewImac img {
  width: 100%;
  height: auto;
  object-fit: contain;
}

.projectOverviewIpad {
  left: 0;
  width: 36%;
}

.projectOverviewIpad img {
  width: 100%;
  height: auto;
  object-fit: contain;
}

@media screen and (min-width: 750px) {
  .projectOverviewIpad img {
    transform: translateX(-25%);
  }
}

@media screen and (min-width: 990px) {
  .projectOverviewIpad img {
    transform: translateX(-40%);
  }
}

.projectOverviewIphone {
  right: 0;
  width: 22%;
}

.projectOverviewIphone img {
  width: 100%;
  object-fit: contain;
  height: auto;
}

@media screen and (min-width: 750px) {
  .projectOverviewIphone img {
    transform: translateX(25%);
  }
}

.projectOverviewText {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 4.5rem;
  flex-grow: 1;
  max-width: 60rem;
}

@media screen and (min-width: 990px) {
  .projectOverviewText {
    max-width: unset;
    justify-self: start;
  }
}

.projectOverviewText h2 {
  color: var(--color-tertiary-darkest);
}

.projectOverviewText p {
  max-width: 45rem;
  line-height: 140%;
}

.projectOverviewButtons {
  width: 100%;
  position: relative;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 1.2rem;
}

.projectOverviewButtons:has(.projectOverviewLogin) {
  margin-bottom: 3rem;
}

.projectOverviewLogin {
  margin: 0;
  width: 100%;
  position: absolute;
  bottom: -2rem;
  left: 50%;
  transform: translateX(-50%) translateY(100%);
}

.projectOverviewLogin + .projectOverviewTasks {
  margin-top: 4rem;
}

.projectOverviewTasks {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 8rem;
  color: var(--color-primary-lighter);
  width: 100%;
  max-width: 50rem;
}

.arrowWrapper {
  display: none;
  position: absolute;
  right: 5%;
  bottom: 0;
}

@media screen and (min-width: 990px) {
  .arrowWrapper {
    display: block;
  }
}

@media screen and (min-width: 1700px) {
  .arrowWrapper {
    bottom: 40%;
  }
}

